# tooling

./: .copier-answers.yml  .copier-init-answers.yml  .coveragerc  .env  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  copier_setup.ps1  package.json  pyproject.toml  requirements.txt  setup.ps1  update.ps1
.github/: dependabot.yml
.github/workflows/: bump.yml  bump_template.yml  codeql-analysis.yml  common.yml  main.yml  meta.yml  publish.yml  sphinx.yml  test.yml
.tools/: pyproject.toml
.tools/requirements/: requirements_both.txt  requirements_dev.txt
.tools/scripts/: Copy-Template.ps1  bump_pyproject.py
.tools/setup/: setup.ps1  update.ps1
docs/: conf.py  index.md  requirements.txt
src/copier_python_test/: __init__.py
tests/: pyproject.toml  test_copier-python-test.py  test_copier_python_test.py  test_dummy.py
