[build-system]
requires = [ "flit_core >=3.3,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "copier_python_test"
requires-python = ">=3.10"
dependencies = [ "dvc[gs]~=2.25.0",]
readme = "README.md"
dynamic = [ "version", "description",]
[[project.authors]]
name = "Blake Naccarato"
email = "blake.naccarato+copier-python-test@gmail.com"

[project.urls]
Home = "https://github.com/blakeNaccarato/copier-python-test"

[project.optional-dependencies]
