[build-system]
requires = ["flit_core >=3.3,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "copier_python_test"
requires-python = ">=3.11"
dependencies = []
readme = "README.md"
dynamic = ["version", "description"]
[[project.authors]]
name = "Blake Naccarato"
email = "blake.naccarato+copier-python-test@gmail.com"

[project.urls]
Home = "https://github.com/blakeNaccarato/copier-python-test"

[project.optional-dependencies]

[tool.ruff]
fix = true
select = ["ALL"]
src = ["src", "tests"]
target-version = "py311"
extend-exclude = ["template", "typings", ".github", ".tools", ".venv"]
ignore = [
    "ANN201", # Checks that public functions and methods have return type annotations.
    "D10",    # Missing docstrings
    "D203",   # 1 blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "DTZ",    # Timezones are important, but only contextually necessary.
    "INP001", # False positive. Checks for packages missing `__init__.py`
]

[tool.ruff.flake8-bugbear]
# So B008 doesn't complain about Typer constructs
extend-immutable-calls = ["Argument", "Option"]

[tool.ruff.pep8-naming]
classmethod-decorators = ["pydantic.validator"]
